--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,28 @@
-**/.DS_STORE
-npm-debug.log
-.imdone
-build
-coverage
-node_modules
-.env
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+/.idea
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/.storybook-build
+/build
+/lib
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# ignore css files (using scss)
+src/**/*.css
