--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint app"
   },
   "engines": {
-    "node": ">= 6",
-    "npm": ">= 3"
+    "node": "8.11.1",
+    "npm": "6.0.0"
   },
   "dependencies": {
     "babel-core": "^6.18.0",
