--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^4.6.5",
     "multer": "^1.3.0",
     "ncp": "^2.0.0",
+    "socket.io": "^2.1.1",
     "validator": "^9.4.1"
   },
   "devDependencies": {
