--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,9 @@
 {
-  "extends": ["eslint:recommended", "google"],
+  "extends": [
+    "eslint:recommended",
+    "google",
+    "prettier"
+  ],
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2017,
@@ -14,11 +18,20 @@
     "es6": true
   },
   "rules": {
-    "strict": [2, "never"],
+    "strict": [
+      2,
+      "never"
+    ],
     "require-jsdoc": 0,
     "no-invalid-this": 0,
-    "max-len": [1, 120],
-    "object-curly-spacing": ["error", "always"],
+    "max-len": [
+      1,
+      120
+    ],
+    "object-curly-spacing": [
+      "error",
+      "always"
+    ],
     "babel/new-cap": 1,
     "babel/no-await-in-loop": 1
   }
