--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "mongoose": "^4.6.5",
     "multer": "^1.3.0",
     "ncp": "^2.0.0",
+    "passport": "^0.4.0",
+    "passport-facebook-token": "^3.3.0",
     "prettier": "^1.13.7",
     "socket.io": "^2.1.1",
     "validator": "^9.4.1"
