--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "tarely-server",
+  "name": "recipes-server",
   "version": "0.10.0",
-  "description": "tarely server",
   "main": "index.js",
   "scripts": {
     "clean": "rm -rf build",
@@ -17,22 +16,14 @@
     "babel-core": "^6.18.0",
     "bcrypt": "^1.0.0",
     "body-parser": "^1.15.2",
-    "cloudinary": "^1.11.0",
     "cors": "^2.8.1",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
-    "faker": "^4.1.0",
     "helmet": "^3.1.0",
     "jsonwebtoken": "^7.1.0",
     "lodash": "^4.16.4",
     "method-override": "^2.3.6",
     "mongoose": "^4.6.5",
-    "multer": "^1.3.0",
-    "ncp": "^2.0.0",
-    "passport": "^0.4.0",
-    "passport-facebook-token": "^3.3.0",
-    "prettier": "^1.13.7",
-    "socket.io": "^2.1.1",
     "validator": "^9.4.1"
   },
   "devDependencies": {
@@ -42,9 +33,6 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
-    "eslint": "^3.8.1",
-    "eslint-config-google": "^0.7.1",
-    "eslint-plugin-babel": "^4.0.0",
     "nodemon": "^1.11.0"
   }
 }
